* FxValue: do not return translations flagged as empty in getBestTranslation * Minor performance/memory usage fixes
git-svn-id: http://svn.flexive.org/repository/flexive/trunk@2734 d35d4baa-7912-0410-b0ae-edacad209e15